fix: address build issues

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ before_script:
   - gulp processImportsVariable
   - npm run stylefluxCanonical
   - npm run stylefluxVariable
+  - gulp reprocessClean
   - npm run distTokens
   - npm run sassRender
   - npm run distJS
