--- a/package.json
+++ b/package.json
@@ -90,16 +90,16 @@
     "build": "npm-run-all sassRender cssLint jsonLint",
     "buildTokens": "node scripts/tokenScript.js",
     "copyFonts": "copyfiles -f ./node_modules/@alaskaairux/orion-web-core-style-sheets/dist/fonts/*.* ./demo/fonts/",
-    "cssLint": "stylelint './src/*.css'",
+    "cssLint": "stylelint ./src/*.css",
     "dev": "npm-watch buildTokens | npm-watch sassRender-w",
     "dist": "npm-run-all distTokens sassRender cssLint jsonLint",
-    "distJS": "copyfiles -u 1 -V './src/**/*.js' ./dist",
+    "distJS": "copyfiles -u 1 -V ./src/**/*.js ./dist",
     "distTokens": "node scripts/tokenScriptCustom.js",
     "jsonLint": "jsonlint -q ./src/shape.json",
     "sassRender": "sass-render src/*.css src/tokens/*.scss",
     "sassRender-w": "sass-render -w src/**/*.{scss,css}",
-    "stylefluxCanonical": "styleflux -o ./altImports/canonical/*.css",
-    "stylefluxVariable": "styleflux -o ./altImports/variable/*.css",
+    "stylefluxCanonical": "styleflux -o ./altImports/canonical/style.css",
+    "stylefluxVariable": "styleflux -o ./altImports/variable/style.css",
     "sweep": "rm -rf ./altImports ./temp ./demo/css ./demo/fonts ./dist ./src/tokens | rm ./demo/sass/*token*.scss ./src/*.css ./src/*-css.js",
     "yamltest": "yamllint .travis.yml",
     "test": "npm-run-all cssLint jsonLint yamltest",
