--- a/package.json
+++ b/package.json
@@ -35,13 +35,14 @@
   "peerDependencies": {
     "@alaskaairux/orion-design-tokens": "^2.4.2",
     "@alaskaairux/orion-web-core-style-sheets": "^2.6.7",
+    "@alaskaairux/icons": "^3.1.1",
     "@alaskaairux/orion-icons": "^1.6.1",
     "@webcomponents/webcomponentsjs": "^2.2.9",
     "focus-visible": "^4.1.5"
   },
   "devDependencies": {
-    "@alaskaairux/orion-design-tokens": "^2.7.0",
-    "@alaskaairux/orion-icons": "^1.6.2",
+    "@alaskaairux/icons": "^3.1.1",
+    "@alaskaairux/orion-design-tokens": "^2.10.13",
     "@alaskaairux/orion-web-core-style-sheets": "^2.6.7",
     "@commitlint/cli": "^8.3.3",
     "@commitlint/config-conventional": "^7.6.0",
