feat: update to new auro-input element
BREAKING CHANGE: This is a re-do of the whole element, while there are
many things that remained from the previous versions, there have been
many changes to bring this legacy component up to date with innovations.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .DS_Store
 node_modules/
+.cache/
 
 ## Sass files built on demand from Token files
 demo/sass/_*.scss
@@ -9,7 +10,7 @@ altImports/
 ## CSS built from Sass process
 demo/css
 demo/sass/tokenProperties.scss
-src/style.css
+src/*.css
 
 ## *-css built from sass-render process
 *-css.js
@@ -19,4 +20,6 @@ demo/fonts
 
 ## dist files
 dist/
+
+## Karma code coverage reports
 coverage/
