--- a/.travis.yml
+++ b/.travis.yml
@@ -13,16 +13,11 @@ notifactions:
   email: false
 
 before_script:
-  - npm run buildTokens
-  - npm run processSrc
-  - npm run processImportsCanonical
-  - npm run processImportsVariable
-  - npm run stylefluxCanonical
-  - npm run stylefluxVariable
-  - npm run reprocessClean
-  - npm run distTokens
+  - npm run sassBuild:component
+  - npm run postCss:component
   - npm run sassRender
   - npm run distJS
+  - npm run bundler
 
 script:
   - npm run test:ci
