--- a/package.json
+++ b/package.json
@@ -1,127 +1,140 @@
 {
   "//": [
     "================================================================================",
-    "The build process for Lit-Element components is currently a 2-part solution that uses Gulp and npm.",
-    "The primary use of Gulp is for the CSS processing that requires the generation of a CSS file and a series of PostCSS functions.",
-    "Aside from the Sass/PostCSS tasks, all other tasks are also avaialble directly from npm as well.",
-    "To keep things less confucing, all tasks share the same name between Gulp and npm.",
-    "",
-    "# To build resources to view the demo file, perform the following tasks",
-    "  1. $ gulp build",
-    "  2. $ npm run build",
-    "  3. $ polymer serve",
-    "  4. Go to http://127.0.0.1:8081",
-    "",
     "# To work within the development environment, run the following tasks",
-    "  1. $ gulp dev",
-    "  2. $ npm run dev",
-    "  4. $ polymer serve",
-    "  3. Go to http://127.0.0.1:8081",
+    "  1. $ npm run dev",
+    "  2. $ npm run serve",
+    "  3. Go to http://localhost:3001",
     "================================================================================"
   ],
-  "name": "@alaskaairux/ods-inputtext",
-  "version": "1.1.0",
-  "description": "Orion Design System inputtext element",
+  "name": "@alaskaairux/auro-input",
+  "version": "0.0.0",
+  "description": "Auro custom auro-input element",
   "author": "Product design and research",
   "repository": {
     "type": "git",
-    "url": "https://github.com/AlaskaAirlines/OrionStatelessComponents__ods-inputtext"
+    "url": "https://github.com/AlaskaAirlines/ods-inputtext"
   },
   "main": "index.js",
   "license": "Apache-2.0",
   "dependencies": {
-    "lit-element": "^2.3.1"
+    "@alaskaairux/icons": "^3.3.0",
+    "chalk": "^4.1.0",
+    "lit-element": "^2.4.0"
   },
   "peerDependencies": {
-    "@alaskaairux/orion-design-tokens": "^2.4.2",
-    "@alaskaairux/orion-web-core-style-sheets": "^2.6.7",
-    "@alaskaairux/icons": "^3.1.1",
-    "@alaskaairux/orion-icons": "^1.6.1",
-    "@webcomponents/webcomponentsjs": "^2.2.9",
-    "focus-visible": "^4.1.5"
+    "@alaskaairux/orion-design-tokens": "^2.12.1",
+    "@alaskaairux/orion-web-core-style-sheets": "^2.12.0",
+    "@webcomponents/webcomponentsjs": "^2.4.4",
+    "focus-visible": "^5.1.0"
   },
   "devDependencies": {
-    "@alaskaairux/icons": "^3.2.3",
     "@alaskaairux/orion-design-tokens": "^2.12.1",
-    "@alaskaairux/orion-web-core-style-sheets": "^2.10.3",
+    "@alaskaairux/orion-web-core-style-sheets": "^2.12.0",
+    "@babel/core": "^7.11.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.11.0",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/runtime": "^7.11.2",
     "@commitlint/cli": "^9.1.2",
-    "@commitlint/config-conventional": "^7.6.0",
-    "@open-wc/testing": "^2.5.20",
-    "@open-wc/testing-karma": "^3.4.8",
+    "@commitlint/config-conventional": "^9.1.2",
+    "@open-wc/testing": "^2.5.25",
+    "@open-wc/testing-karma": "^4.0.5",
     "@polymer/iron-demo-helpers": "^3.1.0",
-    "@polymer/iron-icons": "^3.0.1",
-    "@polymer/polymer": "^3.4.1",
-    "@semantic-release/changelog": "^3.0.6",
-    "@semantic-release/git": "^7.0.18",
-    "@semantic-release/npm": "^5.3.5",
+    "@polymer/polymer": "^3.3.1",
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/git": "^9.0.0",
+    "@semantic-release/npm": "^7.0.5",
     "@webcomponents/webcomponentsjs": "^2.4.4",
     "autoprefixer": "^9.8.6",
+    "babel-loader": "^8.1.0",
+    "compression": "^1.7.4",
     "concat": "^1.0.3",
+    "copy-webpack-plugin": "^6.0.3",
     "copyfiles": "^2.3.0",
-    "css-byebye": "^2.0.0",
-    "focus-visible": "^4.1.5",
-    "gulp": "^4.0.1",
-    "gulp-autoprefixer": "^6.0.0",
-    "gulp-postcss": "^8.0.0",
-    "gulp-sass": "^4.1.0",
-    "husky": "^2.4.1",
-    "jsonlint": "^1.6.3",
-    "lodash": "^4.17.19",
+    "core-js": "^3.6.5",
+    "eslint": "^7.7.0",
+    "eslint-plugin-lit": "^1.2.2",
+    "focus-visible": "^5.1.0",
+    "husky": "^4.2.5",
+    "lodash": "^4.17.20",
+    "marked": "^1.1.1",
+    "nodemon": "^2.0.4",
     "npm-run-all": "^4.1.5",
-    "npm-watch": "^0.6.0",
     "postcss": "^7.0.32",
-    "postcss-custom-properties": "^8.0.10",
-    "postcss-remove-selectors": "^2.0.1",
+    "postcss-custom-properties": "^9.1.1",
+    "postcss-discard-comments": "^4.0.2",
+    "postcss-remove-rules": "^1.0.0",
     "postcss-selector-replace": "^1.0.2",
-    "semantic-release": "^15.14.0",
-    "sinon": "^7.5.0",
-    "style-dictionary": "^2.10.1",
-    "styleflux": "^1.2.0",
+    "semantic-release": "^17.1.1",
+    "sinon": "^9.0.3",
     "stylelint": "^13.6.1",
-    "stylelint-config-standard": "^18.3.0",
+    "stylelint-config-standard": "^20.0.0",
     "wc-sass-render": "^1.2.3",
     "web-component-analyzer": "^1.1.6",
-    "webpack-merge": "^4.2.2",
+    "webpack": "^4.44.1",
+    "webpack-bundle-analyzer": "^3.8.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.1.2",
     "yaml-lint": "^1.2.4"
   },
-  "watch": {
-    "buildTokens": "./src/*.json",
-    "sassRender-w": ".src/**/*.scss"
-  },
+  "browserslist": [
+    "last 4 version",
+    "> 1%",
+    "IE 11"
+  ],
   "scripts": {
-    "build": "npm-run-all sassRender cssLint jsonLint",
-    "apiBuild": "wca analyze 'src/ods-inputtext.js' --outFiles docs/api.md",
-    "buildTokens": "node scripts/tokenScript.js",
-    "copyFonts": "copyfiles -f ./node_modules/@alaskaairux/orion-web-core-style-sheets/dist/fonts/*.* ./demo/fonts/",
-    "cssLint": "stylelint ./src/*.css",
-    "dev": "npm-watch buildTokens | npm-watch sassRender-w",
-    "dist": "npm-run-all distTokens sassRender cssLint jsonLint",
+    "build": "npm run ciBuild",
+    "apiBuild": "wca analyze 'src/auro-input.js' --outFiles docs/api.md",
+    "bundler": "webpack --mode=production",
+    "bundle:test": "webpack-dev-server --host 0.0.0.0",
+    "postinstall": "node packageScripts/postinstall.js",
+    "cssLint": "stylelint './src/*.css'",
+    "dev": "npm run sassBuild:watch",
     "distJS": "copyfiles -u 1 -V './src/**/*.js' ./dist",
-    "distTokens": "node scripts/tokenScriptCustom.js",
-    "jsonLint": "jsonlint -q ./src/shape.json",
-    "sassRender": "sass-render src/*.css src/tokens/*.scss",
-    "sassRender-w": "sass-render -w src/**/*.{scss,css}",
-    "stylefluxCanonical": "styleflux -o ./altImports/canonical/style.css",
-    "stylefluxVariable": "styleflux -o ./altImports/variable/style.css",
-    "sweep": "rm -rf ./altImports ./temp ./demo/css ./demo/fonts ./dist ./src/tokens | rm ./demo/sass/*token*.scss ./src/*.css ./src/*-css.js",
-    "yamltest": "yamllint .travis.yml",
-    "lint": "npm-run-all cssLint jsonLint yamltest",
+    "sassRender": "sass-render src/*.css -t ./scripts/staticStyles-template.js",
+    "sweep": "rm -rf ./temp ./demo/css ./demo/fonts ./dist ./src/tokens | rm ./src/*.css ./src/*-css.js",
+    "esLint": "./node_modules/.bin/eslint src/auro-*.js",
+    "lint": "npm-run-all cssLint test:yaml esLint",
     "test": "karma start --coverage",
-    "test:debug": "karma start --no-single-run --auto-watch=true",
     "test:watch": "karma start --auto-watch=true --single-run=false",
     "test:ci": "npm-run-all test lint",
-    "processSrc": "gulp processSrc",
-    "processImportsCanonical": "gulp processImportsCanonical",
-    "processImportsVariable": "gulp processImportsVariable",
-    "reprocessClean": "gulp reprocessClean",
-    "ciBuild": "npm-run-all buildTokens processSrc processImportsCanonical processImportsVariable stylefluxCanonical stylefluxVariable reprocessClean distTokens sassRender distJS apiBuild",
-    "devBuild": "npm-run-all buildTokens processSrc distTokens sassRender distJS"
+    "test:yaml": "yamllint .travis.yml",
+    "ciBuild": "npm-run-all sassBuild sassRender cssLint distJS bundler postinstall apiBuild",
+    "sassBuild": "npm-run-all sassBuild:demo sassBuild:component postCss:component sassRender",
+    "sassBuild:dev": "npm-run-all sassBuild:demo sassBuild:component postCss:component sassRender",
+    "sassBuild:demo": "node-sass ./demo/sass/ --output ./demo/css/",
+    "sassBuild:component": "node-sass ./src/ --output ./src/",
+    "sassBuild:watch": "nodemon -e scss --watch src --exec npm run sassBuild:dev",
+    "postCss:component": "node ./scripts/postCss.js",
+    "serve": "polymer serve --port 3001 --hostname 0.0.0.0"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm-run-all test lint",
+      "pre-commit": "npm-run-all test lint bundler postinstall",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
+  },
+  "babel": {
+    "presets": [
+      [
+        "@babel/preset-env",
+        {
+          "useBuiltIns": "entry",
+          "corejs": "3.0.0"
+        }
+      ]
+    ],
+    "plugins": [
+      "@babel/plugin-syntax-dynamic-import",
+      [
+        "@babel/plugin-transform-runtime",
+        {
+          "regenerator": true
+        }
+      ]
+    ]
   },
   "release": {
     "branch": "master",
@@ -159,21 +172,13 @@
   "contributors": [
     {
       "name": "Dale Sande",
-      "email": "dale.sande@alaskaair.com"
-    },
-    {
-      "name": "Kevin Sonnichsen",
-      "email": "Kevin.Sonnichsen@alaskaair.com"
-    },
-    {
-      "name": "[author]",
-      "email": "[author-email]"
+      "email": "dale.sande@gmail.com"
     }
   ],
   "keywords": [
     "alaska airlines",
-    "orion design system",
-    "web components",
-    "inputtext"
+    "auro",
+    "design system",
+    "web components"
   ]
 }
